# hectic-hexagons

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_wasm.sh  clean.sh  main.c
.github/workflows/: build.yml  ci.yml
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
demo/: hectic-hexagons.js  hectic-hexagons.wasm  index.html
sounds/: README.md
src/: audio.c  bump_allocator.c  constants.c  cursor.c  game.c  game.h  game_state.c  game_state.h  geometry.h  graphics.c  graphics.h  hex.c  input.c  input.h  main.c  statistics.c  text.c  text.h  time_now.c  time_utils.c  vector.c  window.c
src/include/: audio.h  bump_allocator.h  constants.h  cursor.h  game.h  game_state.h  graphics.h  hex.h  input.h  macros.h  point.h  statistics.h  text.h  time_now.h  time_utils.h  vector.h  window.h
src/test/: test_boards.c  test_boards.h
